# freeradical

./: .gitignore  Pipfile  README.md  pyproject.toml
ansible/: Makefile  README.md  ansible.cfg  first_run.yml  install_mastodon.yml  requirements.txt
ansible/files/: Makefile
ansible/files/as-is/etc/nginx/conf.d/: local.conf
ansible/files/as-is/etc/redis/: redis.conf
ansible/files/etc/nginx/sites-available/: default  mastodon.conf-80_and_443  mastodon.conf-80only
ansible/files/etc/postgresql/9.5/main/: pg_hba.conf  (+1 more)
ansible/files/etc/systemd/system/: docker-mastodon.service
ansible/host_vars/: mastodon
ansible/roles/backup/meta/: main.yml
ansible/roles/backup/tasks/: doit.yml  main.yml
ansible/roles/backup/templates/: mastodon-backup.sh.j2  minimal-s3cfg.j2
ansible/roles/backup/vars/: main.yml
ansible/roles/base_packages/tasks/: main.yml
ansible/roles/database/tasks/: main.yml
ansible/roles/letsencrypt/tasks/: doit.yml  main.yml
ansible/roles/letsencrypt/templates/: certbot.j2
ansible/roles/mastodon/files/: daemon.json
ansible/roles/mastodon/tasks/: configure.yml  main.yml
ansible/roles/mastodon/vars/: main.yml
ansible/roles/nginx/files/: dhparams.pem
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/templates/: default.j2  mastodon.j2
ansible/roles/nginx/vars/: main.yml
ansible/roles/postgresql/vars/: main.yml
ansible/roles/redis/tasks/: main.yml
ansible/roles/webserver/meta/: main.yml
ansible/roles/webserver/tasks/: main.yml
content/: README.md  blocked.md  extended.md
scripts/: README.md  instance_rank.py
(+3 files in other folders)
